crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM222_SIM222.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    name: ExprOrTrue
    body: "Use `True` instead of `... or True`"
    suggestion: "Replace with `True`"
    fixable: true
  location:
    row: 1
    column: 8
  end_location:
    row: 1
    column: 12
  fix:
    content: "True"
    location:
      row: 1
      column: 3
    end_location:
      row: 1
      column: 12
  parent: ~
- kind:
    name: ExprOrTrue
    body: "Use `True` instead of `... or True`"
    suggestion: "Replace with `True`"
    fixable: true
  location:
    row: 4
    column: 15
  end_location:
    row: 4
    column: 19
  fix:
    content: "True"
    location:
      row: 4
      column: 3
    end_location:
      row: 4
      column: 19
  parent: ~
- kind:
    name: ExprOrTrue
    body: "Use `True` instead of `... or True`"
    suggestion: "Replace with `True`"
    fixable: true
  location:
    row: 7
    column: 9
  end_location:
    row: 7
    column: 13
  fix:
    content: "True"
    location:
      row: 7
      column: 3
    end_location:
      row: 7
      column: 14
  parent: ~
- kind:
    name: ExprOrTrue
    body: "Use `True` instead of `... or True`"
    suggestion: "Replace with `True`"
    fixable: true
  location:
    row: 7
    column: 14
  end_location:
    row: 7
    column: 18
  fix:
    content: "True"
    location:
      row: 7
      column: 9
    end_location:
      row: 7
      column: 18
  parent: ~

